order-database-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: order-mariadb-sts
spec:
  serviceName: order-database-service
  replicas: 3
  selector:
    matchLabels:
      app: order-mariadb
  template:
    metadata:
      labels:
        app: order-mariadb
    spec:
      containers:
        - name: order-mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: mariadb-port
          volumeMounts:
            - name: datadir
              mountPath: /var/lib/mysql/
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 300M
