jwt.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
  annotations:
    konghq.com/plugins: jwt
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: auth-sercice
  selector:
    app: auth-sercice
