order-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-database-service
  labels:
    app: order-mariadb
spec:
  ports:
    - port: 3306
      name: mariadb-port
  clusterIP: None
  selector:
    app: mariadb
